MyDevWork/retrieveUnpackaged/objects/Book_Copy__c.object
<CustomObject>
    <fields>
        <fullName>Book_Number__c</fullName>
        <displayFormat>BK-{0000}</displayFormat>
        <label>Book Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Book__c</fullName>
        <label>Book</label>
        <referenceTo>Book__c</referenceTo>
        <relationshipLabel>Book copies</relationshipLabel>
        <relationshipName>Book_copies</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Issued__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Issued</label>
        <type>Checkbox</type>
    </fields>
    <label>Book Copy</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Book Copy Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Book copies</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>